--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
-    "mongoose": "^7.4.1"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.1",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
