--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
+    "socket.io": "^4.7.1",
     "validator": "^13.9.0"
   },
   "devDependencies": {
